# thesis

./: .gitignore  ATS_AI_Analysis.md  DRAFT_PROBLEM_SPACE.md  Entity Recognition in Resumes.jsonl  IDEA.md  PART_1.md  PART_2.md  PART_3.md  PART_4.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  run_chainlit.sh  thesis-workflow.excalidraw
demo/: .gitignore  DEMO_PRESENTATION.md  DEMO_SETUP.md  DEMO_VIDEO_SCRIPT.md  PLAN.md  README.md  TEST_SCENARIOS.md  global-bottom.vue  package.json  pnpm-lock.yaml  slides.md  style.css  uno.config.ts  vite.config.ts
demo/components/: MetricsDisplay.vue  PresentationTimer.vue
demo/docs/: DEMO_SETUP.md
demo/pages/: appendix.md
demo/setup/: main.ts
demo/styles/: index.css
docs/: CLAUDE.md  DRAFT_PROBLEM_SPACE.md  EVALUATION.md  PART_5.md  POC.md  PROGRESS.md  README.md  TODO.md
results/: baseline_frr_results.json  baseline_frr_summary.json  frr_comparison_data.json  frr_comparison_report.md  multiagent_frr_results.json  multiagent_frr_summary.json
scripts/: evaluate_baseline_frr.py  evaluate_multiagent_frr.py  test_multiagent_sample.py
src/: config.py  demo_matching.py  main.py  test_milvus.db
src/agents/: __init__.py  unified_agent.py
src/chainlit/: app.py
src/data/: candidates.csv
src/evaluation/: __init__.py  baseline_evaluator.py  frr_calculator.py  frr_comparison.py  keyword_extractor.py  multiagent_evaluator.py
src/models/: __init__.py  database.py
src/notebooks/: poc.ipynb
tests/: conftest.py
thesis-content/: main.aux  main.lof  main.lot  main.out  main.tex  main.toc
(+47 files in other folders)
