[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "ipykernel>=6.29.5",
    "openai>=1.95.0",
    "openrouter>=1.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
]
